--- a/params.yaml
+++ b/params.yaml
@@ -8,12 +8,8 @@ data_source:
   s3_source_test: data_given/test/
 
 load_data:
-  raw_data_train_1: data_given/train/covid
-  raw_data_train_2: data_given/train/normal
-  raw_data_train_3: data_given/train/viral
-  raw_data_test_1: data_given/test/covid
-  raw_data_test_2: data_given/test/normal
-  raw_data_test_3: data_given/test/viral
+  raw_data_train: data_given/train/
+  raw_data_test: data_given/test/
 
 split_data:
   train_path: data_given/train
