--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,13 +1,12 @@
 stages:
-  get_data:
-    cmd: python src/get_data.py --config=params.yaml
+  training:
+    cmd: python src/train.py --config=params.yaml
     deps:
     - src/get_data.py
     - src/preprocess_data.py
-    - data_given/train/
-    - data_given/test/
+    - src/train.py
     outs:
-    - data/raw/winequality.csv
+    - saved_models/model_vgg16.h5
 
   split_data:
     cmd: python src/split_data.py --config=params.yaml
