--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,150 @@
-# local package install
--e .
-
-# third party packages
-dvc
-dvc[gdrive]
-sklearn
-pandas
-pytest
-tox
-flake8
-flask
-gunicorn
+absl-py==0.15.0
+aiohttp==3.7.4.post0
+aiohttp-retry==2.4.6
+appdirs==1.4.4
+arrow==1.2.1
+astunparse==1.6.3
+async-timeout==3.0.1
+atomicwrites==1.4.0
+atpublic==2.3
+attrs==21.2.0
+backports.entry-points-selectable==1.1.0
+binaryornot==0.4.4
+cached-property==1.5.2
+cachetools==4.2.4
+certifi==2020.12.5
+cffi==1.15.0
+chardet==4.0.0
+charset-normalizer==2.0.7
+clang==5.0
+click==8.0.3
+colorama==0.4.4
+commonmark==0.9.1
+configobj==5.0.6
+contextvars==2.4
+cookiecutter==1.7.3
+cryptography==35.0.0
+cycler==0.11.0
+dataclasses==0.8
+decorator==4.4.2
+dictdiffer==0.9.0
+diskcache==5.2.1
+distlib==0.3.3
+distro==1.6.0
+dpath==2.0.5
+dulwich==0.20.26
+dvc==2.8.1
+filelock==3.3.2
+flatbuffers==1.12
+flatten-dict==0.4.2
+flufl.lock==3.2
+fsspec==2021.10.1
+ftfy==6.0.3
+funcy==1.16
+future==0.18.2
+gast==0.4.0
+gitdb==4.0.9
+GitPython==3.1.18
+google-api-core==2.2.1
+google-api-python-client==2.28.0
+google-auth==2.3.2
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+googleapis-common-protos==1.53.0
+grandalf==0.6
+grpcio==1.41.1
+h5py==3.1.0
+httplib2==0.20.1
+idna==3.3
+idna-ssl==1.1.0
+immutables==0.16
+importlib-metadata==4.8.1
+importlib-resources==5.4.0
+iniconfig==1.1.1
+Jinja2==3.0.2
+jinja2-time==0.2.0
+joblib==1.1.0
+keras==2.6.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+mailchecker==4.0.13
+Markdown==3.3.4
+MarkupSafe==2.0.1
+matplotlib==3.3.4
+multidict==5.2.0
+nanotime==0.5.2
+networkx==2.5.1
+numpy==1.19.5
+oauth2client==4.1.3
+oauthlib==3.1.1
+opencv-contrib-python==4.5.1.48
+opt-einsum==3.3.0
+packaging==21.2
+pandas==1.1.5
+pathspec==0.8.1
+phonenumbers==8.12.36
+Pillow==8.4.0
+platformdirs==2.4.0
+pluggy==1.0.0
+ply==3.11
+poyo==0.5.0
+protobuf==3.19.1
+psutil==5.8.0
+py==1.10.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pydot==1.4.2
+PyDrive2==1.10.0
+pygit2==1.6.1
+Pygments==2.10.0
+pygtrie==2.4.2
+pyOpenSSL==21.0.0
+pyparsing==2.4.7
+pytest==6.2.5
+python-benedict==0.24.3
+python-dateutil==2.8.2
+python-fsutil==0.5.0
+python-slugify==5.0.2
+pytz==2021.3
+PyYAML==6.0
+requests==2.26.0
+requests-oauthlib==1.3.0
+rich==10.12.0
+rsa==4.7.2
+ruamel.yaml==0.17.16
+ruamel.yaml.clib==0.2.6
+scikit-learn==0.24.2
+scipy==1.5.4
+shortuuid==1.0.1
+shtab==1.4.2
+six==1.15.0
+sklearn==0.0
+smmap==5.0.0
+tabulate==0.8.9
+tensorboard==2.7.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.6.0
+tensorflow-estimator==2.7.0
+termcolor==1.1.0
+text-unidecode==1.3
+threadpoolctl==3.0.0
+toml==0.10.2
+tox==3.24.4
+tqdm==4.62.3
+typing-extensions==3.7.4.3
+uritemplate==4.1.1
+urllib3==1.26.7
+virtualenv==20.9.0
+voluptuous==0.12.2
+wcwidth==0.2.5
+Werkzeug==2.0.2
+win-unicode-console==0.5
+wincertstore==0.2
+wrapt==1.12.1
+xmltodict==0.12.0
+yarl==1.7.0
+zc.lockfile==2.0
+zipp==3.6.0
