--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,9 @@ dpath==2.0.5
 dulwich==0.20.26
 dvc==2.8.1
 filelock==3.3.2
+flake8==4.0.1
+Flask==2.0.2
+Flask-Cors==3.0.10
 flatbuffers==1.12
 flatten-dict==0.4.2
 flufl.lock==3.2
@@ -59,9 +62,10 @@ httplib2==0.20.1
 idna==3.3
 idna-ssl==1.1.0
 immutables==0.16
-importlib-metadata==4.8.1
+importlib-metadata==4.2.0
 importlib-resources==5.4.0
 iniconfig==1.1.1
+itsdangerous==2.0.1
 Jinja2==3.0.2
 jinja2-time==0.2.0
 joblib==1.1.0
@@ -72,6 +76,7 @@ mailchecker==4.0.13
 Markdown==3.3.4
 MarkupSafe==2.0.1
 matplotlib==3.3.4
+mccabe==0.6.1
 multidict==5.2.0
 nanotime==0.5.2
 networkx==2.5.1
@@ -94,9 +99,11 @@ psutil==5.8.0
 py==1.10.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycodestyle==2.8.0
 pycparser==2.20
 pydot==1.4.2
 PyDrive2==1.10.0
+pyflakes==2.4.0
 pygit2==1.6.1
 Pygments==2.10.0
 pygtrie==2.4.2
@@ -122,6 +129,7 @@ shtab==1.4.2
 six==1.15.0
 sklearn==0.0
 smmap==5.0.0
+-e git+https://github.com/Monalsingh/cnn_dvc_task.git@9f70d12031e77edf86fd591a3fd5e45cad815617#egg=src
 tabulate==0.8.9
 tensorboard==2.7.0
 tensorboard-data-server==0.6.1
@@ -148,4 +156,3 @@ xmltodict==0.12.0
 yarl==1.7.0
 zc.lockfile==2.0
 zipp==3.6.0
-flake8
